# sopel-pronouns

./: NEWS  README.md  pyproject.toml
sopel_pronouns/: plugin.py
