[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_pronouns", "sopel_pronouns.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-pronouns"
version = "0.1.0"
description = "Pronoun-sharing plugin for Sopel IRC bots"

authors = [
  { name="Elsie Powell" },
]

maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: Eiffel Forum License (EFL)",
  "License :: OSI Approved :: Eiffel Forum License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-pronouns"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-pronouns/issues"

[project.entry-points."sopel.plugins"]
"pronouns" = "sopel_pronouns.plugin"
